# mlops-learn

./: .env  .env.amltmp  .gitignore  README.md  config.json  config.py  pyproject.toml
.github/workflows/: data-preprocessing.yml  data-upload.yml  eda.yml  model-training.yml  readme.md
notebooks/: data_preprocessing.ipynb.amltmp  data_upload.ipynb  eda.ipynb.amltmp  model_training.ipynb
notebooks/.ipynb_aml_checkpoints/: data_upload-checkpoint2024-10-11-11-37-10Z.ipynb  eda-checkpoint2024-10-11-11-53-6Z.ipynb  eda-checkpoint2024-10-11-11-55-43Z.ipynb  eda-checkpoint2024-10-11-12-10-47Z.ipynb  eda-checkpoint2024-10-11-12-10-49Z.ipynb  eda-checkpoint2024-10-11-12-14-18Z.ipynb  eda-checkpoint2024-10-11-12-15-53Z.ipynb  eda-checkpoint2024-10-11-12-19-12Z.ipynb  eda-checkpoint2024-10-11-12-2-6Z.ipynb  eda-checkpoint2024-10-11-12-23-14Z.ipynb  eda-checkpoint2024-10-11-12-24-58Z.ipynb  eda-checkpoint2024-10-11-12-3-3Z.ipynb  eda-checkpoint2024-10-11-12-44-27Z.ipynb  eda-checkpoint2024-10-11-12-47-56Z.ipynb  eda-checkpoint2024-10-11-12-49-35Z.ipynb  eda-checkpoint2024-10-11-12-51-3Z.ipynb  eda-checkpoint2024-10-11-12-6-36Z.ipynb  eda-checkpoint2024-10-11-12-6-7Z.ipynb  eda-checkpoint2024-10-11-12-7-47Z.ipynb  iris-dataset-exploration-to-model-selection-checkpoint2024-10-11-10-4-17Z.ipynb  model_training-checkpoint2024-10-11-13-10-21Z.ipynb  model_training-checkpoint2024-10-11-13-11-9Z.ipynb  (+8 more)
scripts/: correlation_matrix.csv  data_analysis.py  data_preprocessing.py  data_upload.py  data_upload.py.amltmp  eda.ipynb.amltmp  eda.py  model_training.py  pipeline.py
