[tool.poetry]
name = "mlops-learn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
azureml-sdk = "^1.58.0"
python-dotenv = "^1.0.1"
mlflow = "^2.17.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
